<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Jugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:text="@string/string_jugar"
        android:backgroundTint="@color/teal_700"
        android:onClick="Jugar"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_Puntaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_Jugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.10"
        android:onClick="verPuntaje"
        android:text="@string/string_puntaje"
        android:backgroundTint="@color/teal_700"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_Respuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_Puntaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.11"
        android:onClick="verRespuesta"
        android:text="@string/string_respuesta"
        android:backgroundTint="@color/teal_700"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_Datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_Respuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.12"
        android:text="@string/string_Datos"
        android:onClick="verDatos"
        android:backgroundTint="@color/teal_700"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>