<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jugar"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Jugar"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/txv_nick_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="30dp"
                android:text=""
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/txv_puntaje"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="30dp"
                android:text="@string/string_puntaje_total"
                android:textStyle="bold"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="30dp"
                android:text="¿Cuál es su número elegido?(1-10)"
                android:textStyle="bold"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/edt_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_numero"
                android:inputType="number"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/txv_intentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_intentos"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="50dp"
                android:layout_marginLeft="05dp"
                android:layout_marginRight="05dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_adivinar"
                android:layout_width="0dp"
                android:layout_weight="4.2"
                android:layout_height="50dp"
                android:text="@string/string_adivinar"
                android:onClick="adivinar"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="05dp"
                android:backgroundTint="@color/teal_700"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="50dp"
                android:layout_marginLeft="05dp"
                android:layout_marginRight="05dp"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>